--- a/template/table.tmpl
+++ b/template/table.tmpl
@@ -12,6 +12,7 @@
     <tr>
       <th align="right"> 品番 </th>
       <th align="right"> 品名 </th>
+      <th align="right"> 形式寸法 </th>
     </tr>
     </thead>
 
@@ -20,6 +21,7 @@
     <tr>
       <td>{{ .Pid }}</td>
       <td>{{ .Name }}</td>
+      <td>{{ .Type }}</td>
     </tr>
     {{end}}
     </tbody>
