--- a/template/table.tmpl
+++ b/template/table.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <title> PNsearch </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
@@ -10,20 +11,38 @@
   <table class="table table-striped">
     <thead>
     <tr>
+      <th align="right"> 発注日<br>又は<br>発注指示日 </th>
+      <th align="right"> 納入完了日<br>又は<br>払出日 </th>
       <th align="right"> 要求番号 </th>
       <th align="right"> 品番 </th>
       <th align="right"> 品名 </th>
       <th align="right"> 形式寸法 </th>
+      <th align="right"> メーカ </th>
+      <th align="right"> 材質 </th>
+      <th align="right"> 必要数 </th>
+      <th align="right"> 発注単価 </th>
+      <th align="right"> 発注金額 </th>
+      <th align="right"> 工程名 </th>
+      <th align="right"> 納入場所 </th>
     </tr>
     </thead>
 
     <tbody>
     {{range .table}}
     <tr>
-      <td>{{ .UnitNo }}</td>
-      <td>{{ .Pid }}</td>
-      <td>{{ .Name }}</td>
-      <td>{{ .Type }}</td>
+      <td>発注日まだ</td>                      <!-- 発注日<br>又は<br>発注指示日 -->
+      <td>払出日まだ</td>                      <!-- 納入完了日<br>又は<br>払出日 -->
+      <td>{{ .UnitNo }}</td>                   <!-- 要求番号 -->
+      <td>{{ .Pid }}</td>                      <!-- 品番 -->
+      <td>{{ .Name }}</td>                     <!-- 品名 -->
+      <td>{{ .Type }}</td>                     <!-- 形式寸法 -->
+      <td>{{ .Maker }}</td>                    <!-- メーカ -->
+      <td>{{ .Material }}</td>                 <!-- 材質 -->
+      <td>{{ .OrderQuantity }}</td>            <!-- 必要数 -->
+      <td>{{ .OrderUnitPrice }}</td>           <!-- 発注単価 -->
+      <td>{{ .OrderCost }}</td>                <!-- 発注金額 -->
+      <td>{{ .Process }}</td>                  <!-- 工程名 -->
+      <td>{{ .DeliveryPlace }}</td>            <!-- 納入場所 -->
     </tr>
     {{end}}
     </tbody>
