[add] title [mod] arign center [rm] header

--- a/template/table.tmpl
+++ b/template/table.tmpl
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <title> PNsearch </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-  <h3>検索結果</h3>
   {{ .msg }}
   <table class="table table-striped">
     <thead>
     <tr>
-      <th align="right"> 要求番号 </th>
-      <th align="right"> 品番 </th>
-      <th align="right"> 品名 </th>
-      <th align="right"> 形式寸法 </th>
+      <th align="center"> 要求番号 </th>
+      <th align="center"> 品番 </th>
+      <th align="center"> 品名 </th>
+      <th align="center"> 形式寸法 </th>
     </tr>
     </thead>
 
