[add] filename option

--- a/template/table.tmpl
+++ b/template/table.tmpl
@@ -29,8 +29,8 @@
     <tbody>
     {{range .table}}
     <tr>
-      <td>発注日まだ</td>                      <!-- 発注日<br>又は<br>発注指示日 -->
-      <td>払出日まだ</td>                      <!-- 納入完了日<br>又は<br>払出日 -->
+      <td>発注日表示対応中</td>                      <!-- 発注日<br>又は<br>発注指示日 -->
+      <td>払出日表示対応中</td>                      <!-- 納入完了日<br>又は<br>払出日 -->
       <td>{{ .UnitNo }}</td>                   <!-- 要求番号 -->
       <td>{{ .Pid }}</td>                      <!-- 品番 -->
       <td>{{ .Name }}</td>                     <!-- 品名 -->
