--- a/template/table.tmpl
+++ b/template/table.tmpl
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <title> PNsearch </title>
+  <title>PN Search Web</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
@@ -10,8 +10,8 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th align="center"> 発注日<br>又は<br>発注指示日 </th>
-      <th align="center"> 納入完了日<br>又は<br>払出日 </th>
+      <th align="center"> 発注日 </th>
+      <th align="center"> 払出日 </th>
       <th align="center"> 要求番号 </th>
       <th align="center"> 品番 </th>
       <th align="center"> 品名 </th>
