--- a/template/table.tmpl
+++ b/template/table.tmpl
@@ -29,19 +29,7 @@
     <tbody>
     {{range .table}}
     <tr>
-      <td>{{ .OrderDate }}</td>                <!-- 発注日<br>又は<br>発注指示日 -->
-      <td>{{ .RealDeliveryDate }}</td>         <!-- 納入完了日<br>又は<br>払出日 -->
-      <td>{{ .UnitNo }}</td>                   <!-- 要求番号 -->
-      <td>{{ .Pid }}</td>                      <!-- 品番 -->
-      <td>{{ .Name }}</td>                     <!-- 品名 -->
-      <td>{{ .Type }}</td>                     <!-- 形式寸法 -->
-      <td>{{ .Maker }}</td>                    <!-- メーカ -->
-      <td>{{ .Material }}</td>                 <!-- 材質 -->
-      <td>{{ .OrderQuantity }}</td>            <!-- 必要数 -->
-      <td>{{ .OrderUnitPrice }}</td>           <!-- 発注単価 -->
-      <td>{{ .OrderCost }}</td>                <!-- 発注金額 -->
-      <td>{{ .Process }}</td>                  <!-- 工程名 -->
-      <td>{{ .DeliveryPlace }}</td>            <!-- 納入場所 -->
+      {{range .}}<td>{{.}}</td>{{end}}
     </tr>
     {{end}}
     </tbody>
