--- a/template/table.tmpl
+++ b/template/table.tmpl
@@ -1,27 +1,17 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <title>PN Search Web</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+{{define "table"}}
+<table class="table table-striped">
+  <thead>
+  <tr>
+    {{range .header}} <th align="center"> {{.}} </th> {{end}}
+  </tr>
+  </thead>
 
-<body>
-  {{ .query }}を検索, {{ .msg }}
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      {{range .header}} <th align="center"> {{.}} </th> {{end}}
-    </tr>
-    </thead>
-
-    <tbody>
-    {{range .table}}
-    <tr>
-      {{range .}}<td>{{.}}</td>{{end}}
-    </tr>
-    {{end}}
-    </tbody>
-  </table>
-
-</body>
-</html>
+  <tbody>
+  {{range .table}}
+  <tr>
+    {{range .}}<td>{{.}}</td>{{end}}
+  </tr>
+  {{end}}
+  </tbody>
+</table>
+{{end}}
