--- a/template/ui.tmpl
+++ b/template/ui.tmpl
@@ -86,12 +86,12 @@
       <!-- 表示設定 -->
       {{$querySelect := .query.Select}}
       {{ range $i, $label := .labels }}
-        <input type="checkbox" name="select" id="select-{{$label.Value}}" value="{{$label.Value}}"
+        <input type="checkbox" name="select" id="select-{{$label.Name}}" value="{{$label.Name}}"
         {{range $querySelect}}
-          {{if eq $label.Value .}}checked{{end}}
+          {{if eq $label.Name .}}checked{{end}}
         {{end}}
         >
-        <label for="select-{{$label.Value}}">{{$i}}: {{$label.Name}}</label>
+        <label for="select-{{$label.Name}}">{{$i}}: {{$label.Alias}}</label>
       {{end}}
 
       <!-- 検索ボタン -->
