[add] filter OR, [mod] 発注フィルタ、納入フィルタ @ui.tmpl

--- a/template/ui.tmpl
+++ b/template/ui.tmpl
@@ -34,7 +34,7 @@
 
         <td rowspan="4">
           <label for="filter-発注">発注</label>
-          <select id="filter-発注" name="納入">
+          <select id="filter-発注" name="発注">
             <option value="全て">全て</option>
             <option value="未発注">発注日無し(未発注)</option>
             <option value="発注済">発注日有り(発注済)</option>
