--- a/template/ui.tmpl
+++ b/template/ui.tmpl
@@ -35,16 +35,24 @@
         <td rowspan="4">
           <label for="filter-発注">発注</label>
           <select id="filter-発注" name="発注">
-            <option value="全て">全て</option>
-            <option value="未発注">発注日無し(未発注)</option>
-            <option value="発注済">発注日有り(発注済)</option>
+            {{$o := .query.Filter.Order}}
+            {{range $val, $name := .orderable}}
+              <option value="{{ $val }}" {{if eq $o $val}} selected {{end}} >{{ $name }}</option>
+            {{end}}
+            <!-- <option value="全て">全て</option> -->
+            <!-- <option value="未発注">発注日無し(未発注)</option> -->
+            <!-- <option value="発注済">発注日有り(発注済)</option> -->
           </select><br>
           <label for="filter-納入">納入</label>
           <select id="filter-納入" name="納入">
-            <option value="全て">全て</option>
-            <option value="未納入">納入日 無し(未納入)</option>
-            <option value="納入済">納入日 有り(納入済)</option>
-            <option value="納期遅延">納期遅延</option>
+            {{$d := .query.Filter.Delivery}}
+            {{range $val, $name := .deliverable}}
+              <option value="{{ $val }}" {{if eq $d $val}} selected {{end}} >{{ $name }}</option>
+            {{end}}
+            <!-- <option value="全て">全て</option> -->
+            <!-- <option value="未納入">納入日 無し(未納入)</option> -->
+            <!-- <option value="納入済">納入日 有り(納入済)</option> -->
+            <!-- <option value="納期遅延">納期遅延</option> -->
           </select><br>
         </td>
 
