[add] download csv button, Query.Search() 行換え、 引数設定

--- a/template/ui.tmpl
+++ b/template/ui.tmpl
@@ -87,6 +87,7 @@
           </select><br>
           <!-- 検索ボタン -->
           <input type="submit" id="submit" value="検索" style="background-color:#168233">
+          <input type="submit" id="submit1" formaction="/search/csv" value="CSVダウンロード" title="最大50000行までCSVファイルへ出力します。" style="background-color:#168233">
         </td>
       <tbody>
     </table>
